fix: 🐛 make logo and wordmark aligned in the centre

--- a/resources/skins.citizen.styles/Drawer.less
+++ b/resources/skins.citizen.styles/Drawer.less
@@ -80,11 +80,3 @@
 		}
 	}
 }
-
-@media ( min-width: @width-breakpoint-desktop ) {
-	.citizen-drawer {
-		&__header {
-			justify-content: flex-start;
-		}
-	}
-}
